--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,44 @@
 .App {
-  text-align: center;
+  background: rgb(63, 94, 251);
+  background: linear-gradient(
+    90deg,
+    rgba(63, 94, 251, 1) 0%,
+    rgba(252, 70, 107, 1) 100%
+  );
+}
+.App {
+  margin-top: 0px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+#splide01-slide01,
+#splide01-slide02 {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  gap: 1rem;
 }
 
-.App-link {
-  color: #61dafb;
+.padding {
+  padding-right: 0.5rem;
+  padding-left: 0.5rem;
+  color: black;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.Card {
+  background: white;
+  color: black;
+  border-radius: 20px;
+}
+
+.top {
+  background: white;
+}
+
+.header {
+  background: white;
+  color: black;
+  font-size: 1.5rem;
+  font-weight: lighter;
+}
+
+.color {
+  color: black;
 }
