completing the card by adding city name/wind/feelslike/icon/day/discrption

--- a/src/index.css
+++ b/src/index.css
@@ -82,3 +82,12 @@
   width: 100%;
   background-color: red;
 }
+
+.icon {
+  /* background-color: blue; */
+  display: flex;
+  align-items: center;
+  align-text: center;
+  justify-content: center;
+  flex-direction: row;
+}
