--- a/src/index.css
+++ b/src/index.css
@@ -37,6 +37,14 @@
   font-weight: 600;
 }
 
+.title {
+  padding: 15px;
+  color: whitesmoke;
+  font-family: "Recursive", sans-serif;
+  font-size: 24px;
+  font-weight: 600;
+}
+
 .temp {
   padding: 15px;
   color: whitesmoke;
@@ -75,6 +83,14 @@
   display: flex;
   flex-direction: row;
   margin: 3rem;
+  /* background-color: red; */
+  /* justify-content: space-around; */
+}
+.card {
+  /* display: flex; */
+  /* flex-direction: row; */
+  margin: 10rem;
+  background-color: red;
   /* justify-content: space-around; */
 }
 
